<?xml version="1.0" encoding="utf-8"?><!--
########################################################
#####    CASSI, Call Assistant - The MIT-License    ####
########################################################

Copyright (C) 2018, Martin Armbruster

Permission is hereby granted, free of charge, to any person obtaining a copy of this software and
associated documentation files (the "Software"), to deal in the Software without restriction,
including without limitation the rights to use, copy, modify, merge, publish, distribute,
sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial
portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT
NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES
OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-->
<resources>
    <string name="app_name" translatable="false">CASSI</string>
    <string name="cassi_button_start">Start</string>
    <string name="cassi_button_stop">Stop</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cassi_menu_main">Home</string>
    <string name="cassi_menu_pattern_title">Patterns</string>
    <string name="cassi_menu_pattern_settings">Settings</string>
    <string name="cassi_menu_pattern_mapping">Mappings</string>
    <string name="cassi_menu_network">Networks</string>
    <string name="cassi_menu_network_ble">BLE Settings</string>
    <string name="cassi_nav_open">Open navigation</string>
    <string name="cassi_nav_close">Close navigation</string>
    <string name="cassi_patterns">Patterns:</string>
    <string name="cassi_patterns_title">Patterns</string>
    <string name="cassi_patterns_name">Name:</string>
    <string name="cassi_patterns_save">Save</string>
    <string name="cassi_patterns_update">Update</string>
    <string name="cassi_patterns_delete">Delete</string>
    <string name="cassi_patterns_new_part">New Part</string>
    <string name="cassi_patterns_part">Part %d:</string>
    <string name="cassi_patterns_duration">Duration:</string>
    <string name="cassi_patterns_duration_unit">ms</string>
    <string name="cassi_patterns_part_1" translatable="false">1</string>
    <string name="cassi_patterns_part_2" translatable="false">2</string>
    <string name="cassi_patterns_part_3" translatable="false">3</string>
    <string name="cassi_patterns_part_4" translatable="false">4</string>
    <string name="cassi_patterns_part_5" translatable="false">5</string>
    <string name="cassi_patterns_part_default" translatable="false">0</string>
    <string name="cassi_patterns_empty">empty</string>
    <string name="cassi_patterns_error_unique_name">Couldn\'t save the pattern. The name must be unique.</string>
    <string name="cassi_patterns_success_save">Pattern saved.</string>
    <string name="cassi_patterns_success_delete">Pattern deleted.</string>
    <string name="cassi_mapping_calls">Calls:</string>
    <string name="cassi_mapping_sms">SMS/MMS:</string>
    <string name="cassi_mapping_title">Service-Pattern Mappings</string>
    <string name="cassi_settings_ble_title">Bluetooth Low Energy</string>
    <string name="cassi_settings_ble_device">Device name:</string>
    <string name="cassi_settings_ble_service1">Service name (part 1):</string>
    <string name="cassi_settings_ble_service2">Service name (part 2):</string>
    <string name="cassi_notification_title">CASSI, call assistant</string>
    <string name="cassi_notification_scan">Scanning BLE devices</string>
    <string name="cassi_notification_connecting">Connecting to %s</string>
    <string name="cassi_notification_scan_not_found">Device %s not found</string>
    <string name="cassi_notification_connected">Connected to %s</string>
    <string name="cassi_notification_call">Incoming call</string>
    <string name="cassi_notification_sms">Incoming sms/mms</string>
    <string name="cassi_notification_channel_title">CASSI</string>
    <string name="cassi_notification_channel_description">This channel provides information about the current state of CASSI and its connections.</string>
    <string name="cassi_notification_disconnected">Disconnected from %s</string>
    <string name="cassi_notification_end_title">CASSI (stopped)</string>
    <string name="cassi_patterns_error_invalid_numbers">Pattern saved. Please note: There were some invalid numbers that were corrected.</string>
    <string name="cassi_patterns_error_note_range">Note: The values must be within 0 and 255.</string>
    <string name="cassi_permissions_error_bluetooth">Couldn\'t get the permissions for using bluetooth. CASSI can\'t start its service.</string>
    <string name="cassi_permissions_error_bluetooth_admin">Couldn\'t obtain the bluetooth admin permission. CASSI can\'t start its service.</string>
    <string name="cassi_permissions_error_bluetooth_not_enabled">Bluetooth is not enabled. Please, enable bluetooth so that CASSI can start its service.</string>
    <string name="cassi_permissions_error_access_coarse_location">Couldn\'t obtain access to the location. CASSI can\'t start its service.</string>
    <string name="cassi_permissions_error_location_not_enabled">The location service is not enabled. Please, enable it.</string>
    <string name="cassi_permissions_error_receive_sms">Couldn\'t the permission to receive incoming sms. CASSI can\'t start its service.</string>
    <string name="cassi_permissions_error_receive_phone_state">Couldn\'t obtain the permission to notify incoming calls. CASSI can\'t start its service.</string>
    <string name="cassi_permissions_enable_location_action">Enable</string>
</resources>
